src/test/deca/codegen/valid/options/optionBanner.deca
// Description :
//    Test de l'option -b
//
// Resultats :
//    !! SI EXECUTION AVEC L'OPTION -b !!
//    Le compilateur affiche la bannière de l'équipe : == Banner : Gr10 / Gl47 ==
//    L'exécution affiche : Bonjour

{
    print();
    println("Bonjour");
}